# sqlalchemy-orm-pydantic-type-poc

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: dfdaf19d6afa_init.py
