[project]
name = "sqlalchemy-orm-pydantic-type-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.5",
    "ruff>=0.11.13",
    "sqlalchemy>=2.0.41",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
